--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>Youtube</title>
   </head>
-  <body>
+  <body class="bg-warning">
     
     <section id="desktop">
         <!-- Header -->
