--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="video_card">
               <div class="video">
                 <video
-                  src="./Images/Mustafa Jaan E Rehmat Pe Lakhon Salam - Atif Aslam - Boss Menn.mkv"
+                  src="./Images/Mustafa Jaan E Rehmat Pe Lakhon Salam - Atif Aslam - Boss Menn.mp4"
                   id="video"
                 ></video>
                 <div class="video_icons">
